fix: resolve failing test cases